--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "control_panel_ui",
+  "name": "newsnews",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,8 +15,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "actioncable": "^5.2.8-1",
-    "axios": "^0.27.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -76,7 +74,6 @@
     "typescript": "^4.6.3",
     "webpack": "^5.58.1",
     "webpack-cli": "^4.9.0",
-    "webpack-dev-server": "^4.8.1",
-    "xlsx": "^0.18.5"
+    "webpack-dev-server": "^4.8.1"
   }
 }
