--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.0.1",
-    "react-router-dom": "^6.0.1",
-    "redux": "^4.1.1"
+    "react-router-dom": "^6.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
@@ -64,7 +63,6 @@
     "jsdom": "^16.7.0",
     "mini-css-extract-plugin": "^2.4.5",
     "react-paginate": "^8.1.3",
-    "react-redux": "^7.2.5",
     "sass": "^1.42.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.3.0",
